<resources>
    <string name="app_name">CovidCuisine</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usernameHint">Please enter your username…</string>
    <string name="create_post">Create Post</string>
    <string name="categories">Categories</string>
    <string name="post_title">Post Title</string>
    <string name="post_content">Post Content</string>
    <string name="select_photo_from_library">Select Photo from Library</string>
    <string name="or">Or</string>
    <string name="use_camera">Use Camera</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>


    <string-array name="userType">
        <item>Personal</item>
        <item>Commercial</item>
    </string-array>

    <string name="title_activity_results">Results</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="username" />
    <string name="username_label">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_label">Login</string>
    <string name="COU">OR Take a picture first</string>
    <string name="create_post_LANDING">CREATE POST</string>
    <string name="all_categories_LANDING">ALL CATEGORIES</string>
    <string name="homepage">HOMEPAGE</string>

</resources>
